Fixed misalignment with navbar btns

--- a/sources/css/program.css
+++ b/sources/css/program.css
@@ -12,9 +12,7 @@ div {
     padding: 2rem;
 }
 
-li {
-    font-size: 100%;
-}
+
 
 #row1{
     background:#fe9826;
